--- a/index.html
+++ b/index.html
@@ -130,9 +130,12 @@
                 </div>
             </a>
 
-            <a href="https://keters-shop.web.app/?category=tenis" class="relative group overflow-hidden rounded-[2rem] bg-gray-850 border border-white/5 bento-card-mobile h-[250px] md:h-auto">
-                <img src="https://images.unsplash.com/photo-1599388147820-2c7009477e5d?q=80&w=800&auto=format&fit=crop" class="absolute inset-0 w-full h-full object-cover opacity-70 group-hover:scale-105 transition duration-700 object-center">
-                <div class="absolute inset-0 flex items-center justify-center bg-black/50 group-hover:bg-black/30 transition backdrop-blur-[1px]">
+            <a href="https://keters-shop.web.app/?category=tenis" class="relative group overflow-hidden rounded-[2rem] bg-gray-850 border border-white/5 bento-card-mobile h-[250px] md:h-auto block w-full">
+                <img src="https://images.pexels.com/photos/14356066/pexels-photo-14356066.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" 
+                     class="absolute inset-0 w-full h-full object-cover z-0 opacity-80 group-hover:scale-105 transition duration-700"
+                     alt="Tennis Bag">
+                
+                <div class="absolute inset-0 flex items-center justify-center bg-black/30 group-hover:bg-black/20 transition backdrop-blur-[1px] z-10">
                     <h3 class="text-2xl font-black border-b-2 border-neon pb-1 shadow-black drop-shadow-lg text-white">תיקים וציוד</h3>
                 </div>
             </a>
